--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
         "mongoose": "^5.11.12",
         "mongoose-paginate-v2": "^1.3.13"
     },
+    "engines": {
+        "node": "14.15.3"
+    },
     "devDependencies": {
         "nodemon": "^2.0.7"
     }
