--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.11.12",
-        "mongoose-paginate-v2": "^1.3.13"
+        "mongoose-paginate-v2": "^1.3.13",
+        "multer": "^1.4.2"
     },
     "engines": {
         "node": "14.15.3"
